--- a/client/public/index.html
+++ b/client/public/index.html
@@ -32,7 +32,7 @@
   </head>
 
   <body>
-    <p>Make with &hearts; &Star; </p>
+    <!-- <p>Make with &hearts; &Star; </p> -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     
     <div id="root">
